# dns

./: .gitignore  LICENSE  Pipfile  README.md  production.yaml  pyproject.toml  requirements.txt  uv.toml
.github/: dependabot.yml  deployment_message.md  new-pr-comment.md
.github/workflows/: branch-deploy.yml  deploy.yml  json-yaml-validate.yml  new-pr.yml  noop.yml  test.yml  unlock-on-merge.yml
config/: birki.io.yaml  caragolfoundation.org.yaml  ghtrending.io.yaml  gldnfloral.com.yaml  runwayapp.one.yaml
docs/: radar.md
script/: bootstrap  build  deploy  env  plan  test  vendor
script/ci/: test_update_deploy_msg.py  update_deploy_msg.py
