[project]
name = "dns"
version = "0.0.0"
description = "DNS management through octodns"
readme = "README.md"
requires-python = "==3.13.4"
dependencies = [
  "octodns==1.16.0",
  "octodns-cloudflare==1.1.0",
  "jinja2==3.1.6",
]

[tool.uv]
package = false
constraint-dependencies = [
  "certifi==2026.2.25",
  "charset-normalizer==3.4.7",
  "dnspython==2.8.0",
  "fqdn==1.5.1",
  "idna==3.13",
  "jinja2==3.1.6",
  "markupsafe==3.0.3",
  "natsort==8.4.0",
  "octodns==1.16.0",
  "octodns-cloudflare==1.1.0",
  "python-dateutil==2.9.0.post0",
  "pyyaml==6.0.3",
  "requests==2.33.1",
  "six==1.17.0",
  "urllib3==2.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
